--- a/DateList/DateList/DateList.vcxproj.filters
+++ b/DateList/DateList/DateList.vcxproj.filters
@@ -26,9 +26,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="DateList.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\README.md" />
